dataset1235/2025-2/1153765216/users/3700556413/executions/2814675586_3198308593.log
== RUN (2025-08-26 18:59:12)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = 3.14
volume = 4/3 * pi * raio **3  

print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.5567
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1867
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.1887
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4186.6667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7234.56
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:46:08)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * 3.14 * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.5567
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1867
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.1887
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4186.6667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7234.56
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:15)
-- CODE: 
raio = int(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:59:20)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = 3.14
volume = 4/3 * pi * raio **3  

print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.5567
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1867
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.1887
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4186.6667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7234.56
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:14)
-- CODE: 
raio = int(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:42)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:12:38)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = 3.14
volume = (4/3) * pi * raio ** 3  

print(volume)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.5566666666666
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1866666666666665
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.18869333333336
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4186.666666666667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7234.5599999999995
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5233333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:45:18)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * 3.14 * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 69.08
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 12.56
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 40.192
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 125.6
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 150.72
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 6.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:35:53)
-- CODE: 
raio = float(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:37:47)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = float(input(\'digite o valor de pi'))
volume = 4/3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 2
    pi = float(input(\'digite o valor de pi'))
                      ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:37:19)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = 3.14
volume = 4/3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 69.08
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 12.56
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 40.192
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 125.6
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 150.72
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 6.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:16)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * 3.14 * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 69.08
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 12.56
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 40.192
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 125.6
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 150.72
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 6.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:31:53)
-- CODE: 
from math import*
raio = float(input("digite o valor do raio: "))

volume = (4/3) * pi * raio ** 3  

print(round(volume,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:38:00)
-- CODE: 
raio = float(input("digite o valor do raio: "))
pi = float(input("digite o valor de pi"))
volume = 4/3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input("digite o valor de pi"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:34)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:32:14)
-- CODE: 
raio = float(input("digite o valor do raio: ") 
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:16)
-- CODE: 
raio = int(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:35:54)
-- CODE: 
raio = float(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input("digite o valor do raio: ") 
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:17)
-- CODE: 
raio = int(input("digite o valor do raio: ") 
volume = 4/3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = int(input("digite o valor do raio: ") 
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:46:10)
-- CODE: 
raio = float(input("digite o valor do raio: "))
volume = 4/3 * 3.14 * raio ** 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
digite o valor do raio: 696.5567
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
digite o valor do raio: 4.1867
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
digite o valor do raio: 137.1887
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
digite o valor do raio: 4186.6667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
digite o valor do raio: 7234.56
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
digite o valor do raio: 0.5233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
